# cpp-template

./: .gitignore  CMakeLists.txt  LICENSE
source/runtime/: CMakeLists.txt
source/runtime/core/: CMakeLists.txt
source/runtime/core/private/: launch.cpp  launch.h
source/runtime/core/private/windows/: win32_entrypoint.cpp  win32_min.h
source/runtime/core/public/: entrypoint.h  launch_params.h
source/tools/demo/: CMakeLists.txt
source/tools/demo/private/: demo.cpp
